--- a/capi/files/default/fast_bosh/Gemfile
+++ b/capi/files/default/fast_bosh/Gemfile
@@ -4,4 +4,4 @@ source 'https://rubygems.org'
 
 gem 'bosh_cli'
 gem 'bosh_cli_plugin_micro'
-
+gem 'nokogiri', '1.6.3.1' # Used to prevent Nokogiri compilation issues
